horizon (2012.1~e4~20120229.1407-0ubuntu1) UNRELEASED; urgency=low

  * New upstream version.
  * debian/rules: Update due to upstream build changes.
  * debian/control: Update standards-version.
  * debian/patches/openstack-config-settings.patch: Dropped
  * debian/patches/fix-dashboard-django-wsgi.patch: Refreshed
  * debian/patches/fix-dashboard-manage.patch: Refreshed

 -- Chuck Short <zulcss@ubuntu.com>  Wed, 29 Feb 2012 21:02:53 -0500

horizon (2012.1~e4~20120224.1386-0ubuntu1) precise; urgency=low

  * New upstream version. 

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 24 Feb 2012 10:49:27 -0500

horizon (2012.1~e4~20120217.1354-0ubuntu1) precise; urgency=low

  * debian/patches/openstack-config-settings.patch: Refreshed.
  * debian/copyright: Updated copyright.
  * debian/rules: Diable tests since it doesnt work without a
    virtualenv.
  * New upstream release.

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 17 Feb 2012 10:12:25 -0500

horizon (2012.1~e4~20120210.1331-0ubuntu1) precise; urgency=low

  * New Upstream version
  * debian/control: 
   - Add python-coverage as a build dependency. 
   - Add python-novaclient as a build dependency.

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 10 Feb 2012 11:09:58 -0500

horizon (2012.1~e4~20120202.1300-0ubuntu2) precise; urgency=low

  * debian/control: Add python-keystoneclient as a build 
    dependency. 

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 03 Feb 2012 13:29:27 -0500

horizon (2012.1~e4~20120202.1300-0ubuntu1) precise; urgency=low

  * New upstream version.
  * debian/control: Drop dependencies we dont need. 

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 03 Feb 2012 09:55:54 -0500

horizon (2012.1~e3-0ubuntu1) precise; urgency=low

  * New upstream version.
  * debian/conffiles: Don't wipe out local_settings.py on upgrade.
    (LP: #914257) 

 -- Chuck Short <zulcss@ubuntu.com>  Thu, 26 Jan 2012 09:52:53 -0500

horizon (2012.1~e3~20120120.1235-0ubuntu1) precise; urgency=low

  * New upstream release. 
